# mujoco_lnn_navigation

./: .gitignore  README.md  github_link.txt  pyproject.toml
configs/maps/: custom_map_01.yaml  custom_map_02.yaml  custom_map_03.yaml  custom_map_04.yaml  custom_map_05.yaml  custom_map_06.yaml  custom_map_07.yaml  custom_map_08.yaml  custom_map_09.yaml  custom_map_10.yaml  custom_map_11.yaml  custom_map_12.yaml  custom_map_13.yaml  custom_map_14.yaml  custom_map_15.yaml  custom_map_16.yaml  custom_map_17.yaml  custom_map_18.yaml  custom_map_19.yaml  custom_map_20.yaml  custom_map_21.yaml  custom_map_22.yaml  dynamic_crossing.yaml  dynamic_open_single.yaml  example_manual.yaml
configs/splits/: custom22_dynamic_seed25462877008.yaml  custom22_seed25462877008.yaml  custom8_seed25462877008.yaml  custom8_seed25462877008_aug_v6.yaml
configs/task/: ood_dense.yaml  open_clutter.yaml  sparse_goal.yaml
configs/train/: bc_cfc_augmented_maps.yaml  (+11 more)
docs/: 2026-05-11_dynamic_lnn_navigation_start.md
notebooks/: colab_custom22_training.ipynb  colab_ncp_phase1_training.ipynb
report/: main.tex
scripts/: augment_maps.py  batch_evaluate.py  build_weekly_report_figures.py  compare_policies.py  diagnose_rollouts.py  evaluate.py  generate_maps.py  map_editor.py  train.py  train_bc.py  train_maps.py  watch_mujoco.py
tests/: test_cfc_policy.py  test_env_contract.py  test_fixed_map.py  test_map_augmentation.py  test_map_editor.py  test_map_generation.py  test_mujoco_xml.py  test_ncp_policy.py  test_no_isaac_imports.py  test_ppo_smoke.py  test_rays.py
tools/: ncp_smoke_test.py
(+113 files in other folders)
